tests/NormalTests/paczka1/fuzzy1/81221036.err
Error in line 1: qYmJZ A236 74,5
Error in line 13: cfiP4a S227 70,0
Error in line 9: 4lsRYyrEk5 A236 79,1
Error in line 15: r6KKVP S227 65,7
